# openserverless-operator

./: Dockerfile  opsfile.yml  pyproject.toml
