# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
[project]
name = "nuvolaris"
version = "2.0.0"
description = "Apache OpenServerless operator"
authors = [
    {name = "Michele Sciabarra", email = "michele@sciabarra.com"},
    {name = "Francesco Timperi Tiberi", email = "francesco@nuvolaris.io"}
]
license = "Apache-2.0"

dependencies = [
    "kopf[full-auth]>=1.36.1,<2.0.0",
    "PyYAML>=6.0,<7.0",
    "pykube>=0.15.0,<0.16.0",
    "Jinja2>=3.0.3,<4.0.0",
    "requests>=2.32.4,<3.0.0",
    "flatdict>=4.1.0,<5.0.0",
    "croniter>=1.3.5,<2.0.0",
    "minio>=7.1.13,<8.0.0",
    "backoff>=2.2.1,<3.0.0",
    "psycopg-binary>=3.1.18,<4.0.0",
    "psycopg>=3.1.18,<4.0.0",
    "redis>=5.0.4,<6.0.0",
    "bcrypt>=4.2.1,<5.0.0",
]
requires-python = "^3.12, <4.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"

[project.scripts]
dbinit = "nuvolaris.couchdb:init"
actionexecutor = "nuvolaris.actionexecutor:start"
quota_checker = "nuvolaris.quota_checker:start"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
